kubernetes/chronas-map.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: chronas-map
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: chronas-map
    spec:
      containers:
      - name: chronas-map
        image: aumanjoa/chronas-map:ci-#{buildId}#
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chronas-map
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: chronas-map
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chronas-map-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - chronas.org
    - www.chronas.org
    - ar.chronas.org
    - de.chronas.org
    - el.chronas.org
    - en.chronas.org
    - es.chronas.org
    - fr.chronas.org
    - hi.chronas.org
    - it.chronas.org
    - ja.chronas.org
    - nl.chronas.org
    - pl.chronas.org
    - ru.chronas.org
    - sv.chronas.org
    - vi.chronas.org
    - zh.chronas.org
    secretName: https-map
  rules:
  - host: chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: www.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: ar.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: de.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: el.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: en.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: es.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: fr.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: hi.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: it.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: ja.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: nl.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: pl.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: ru.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: sv.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: vi.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
  - host: zh.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-map
          servicePort: 80
